--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Inicio</title>
+	<title>Home</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css\stylesheet.css">
+	<script src="js\jquery-3.2.1.min.js"></script>
 </head>
 <body>
-
+	<div id="main">
+		<h1>Home</h1>
+	</div>
 </body>
 </html>
