--- a/lista.html
+++ b/lista.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home</title>
+	<title>Lista de Usuarios</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link rel="stylesheet" type="text/css" href="css\stylesheet.css">
 	<script src="js\jquery-3.2.1.min.js"></script>
@@ -9,12 +9,14 @@
 </head>
 <body>
 	<div>
-		<h1>Home</h1>
+		<h1>
+			Lista de Usuarios
+		</h1>
 		<menu>
 		   <li>
 		      <menu label="Sections">
 		         <li><a href="newuser.html">Nuevo Usuario</a></li>
-		         <li><a href="lista.html">Lista de Usuarios</a></li>
+		         <li><a href="index.html">Inicio</a></li>
 		      </menu>
 		   </li>
 		</menu>
