--- a/lista.html
+++ b/lista.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link rel="stylesheet" type="text/css" href="css\stylesheet.css">
 	<script src="js\jquery-3.2.1.min.js"></script>
-	<script src="js\ejecucion.js"></script>
+	<script src="js\listar.js"></script>
 </head>
 <body>
 	<div>
@@ -20,6 +20,24 @@
 		      </menu>
 		   </li>
 		</menu>
+	</div>
+	<div>
+		<table id="usuarios">
+			<tr>
+				<th>
+					Nombre
+				</th>
+				<th>
+					Dirección
+				</th>
+				<th>
+					Teléfono
+				</th>
+				<th>
+					Correo Eléctronico
+				</th>
+			</tr>
+		</table>
 	</div>
 </body>
 </html>
