listar usuarios para modificar o eliminar

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		      <menu label="Sections">
 		         <li><a href="newuser.html">Nuevo Usuario</a></li>
 		         <li><a href="lista.html">Lista de Usuarios</a></li>
+		         <li><a href="update.html">Actualizar-Eliminar</a></li>
 		      </menu>
 		   </li>
 		</menu>
