--- a/lista.html
+++ b/lista.html
@@ -17,6 +17,7 @@
 		      <menu label="Sections">
 		         <li><a href="newuser.html">Nuevo Usuario</a></li>
 		         <li><a href="index.html">Inicio</a></li>
+		         <li><a href="update.html">Actualizar-Eliminar</a></li>
 		      </menu>
 		   </li>
 		</menu>
