--- a/update.html
+++ b/update.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link rel="stylesheet" type="text/css" href="css\stylesheet.css">
 	<script src="js\jquery-3.2.1.min.js"></script>
-	<script src="js\ejecucion.js"></script>
+	<script src="js\listar.js"></script>
 </head>
 <body>
 	<div>
@@ -17,10 +17,19 @@
 		      <menu label="Sections">
 		         <li><a href="index.html">Inicio</a></li>
 		         <li><a href="lista.html">Lista de Usuarios</a></li>
-		         <li><a href="update.html">Actualizar-Eliminar</a></li>
 		      </menu>
 		   </li>
 		</menu>
+	</div>
+	<div>
+		<form id="modificar">
+				<input type="submit" value="Mostrar" id="Mostrar">
+				<select id="combo" name="combo">
+					<option>Usuarios</option>
+				</select>
+		</form>
+	</div>
+	<div>
 		<form id="guardar">
 			<label for="Nombre">Nombre:</label>
 			<input type="text" id="Nombre" name="Nombre">
@@ -47,6 +56,7 @@
 			<label for="Pass">Contraseña:</label>
 			<input type="text" id="Pass" name="Pass">
 			<input type="submit" value="Guardar" id="Guardar">
+			<input type="submit" value="Eliminar" id="Eliminar">
 		</form>
 	</div>
 </body>
