--- a/update.html
+++ b/update.html
@@ -28,6 +28,9 @@
 					<option>Usuarios</option>
 				</select>
 		</form>
+		<form id="Eliminar">
+			<input type="submit" value="Eliminar" id="Eliminar">
+		</form>
 	</div>
 	<div>
 		<form id="guardar">
@@ -56,7 +59,6 @@
 			<label for="Pass">Contraseña:</label>
 			<input type="text" id="Pass" name="Pass">
 			<input type="submit" value="Guardar" id="Guardar">
-			<input type="submit" value="Eliminar" id="Eliminar">
 		</form>
 	</div>
 </body>
